Templates now documented and renamed to better suit purpose.

--- a/lore/templates/main/_message.html
+++ b/lore/templates/main/_message.html
@@ -1,3 +1,9 @@
+<!--
+    This is how a message is displayed in the inbox. 
+    Initially, this was just _post, modified.
+    Now, it is it's own "component". Each _filename should be treated as such.
+ -->
+ 
 <article class="uk-comment uk-comment-primary">
     <header class="uk-comment-header uk-grid-medium uk-flex-middle" uk-grid>
         <div class="uk-width-auto">
