--- a/lore/templates/main/about.html
+++ b/lore/templates/main/about.html
@@ -1,3 +1,5 @@
+<!-- TODO: Turn this into a help page. -->
+
 {% extends "main/layout.html" %}
 {% block content %}
     <h2>This is the about page.</h2>
