--- a/lore/templates/main/_offcanvas.html
+++ b/lore/templates/main/_offcanvas.html
@@ -1,16 +1,29 @@
+<!-- 
+    This is the "offcanvas" component.
+    A user can reveal this menu and access client side features, without loading a new page.
+-->
+
 <div id="offcanvas-usage" uk-offcanvas>
     <div class="uk-offcanvas-bar uk-flex uk-flex-column">
         <button class="uk-offcanvas-close" type="button" uk-close></button>
         <h3 class="uk-nav-center">Welcome, {{ current_user.username }}.</h3>
+        
         <ul class="uk-nav uk-nav-primary uk-nav-center">
-            <hr>
+            <hr>      
+
+            <!-- Checklist -->
             <li><a uk-toggle="target: #checklist;animation: uk-animation-slide-top-small"><span class="uk-margin-small-right" uk-icon="icon: check"></span>Checklist</a></li>
             <div id="checklist" class="uk-margin" hidden>
                 <div class="uk-margin-small-bottom"><a uk-icon="plus" uk-toggle="target: #add-task"></a></div>
-                {% include "main/task.html" %}
+                {% include "main/_task.html" %}
                 <ul id="task-list" class="uk-light" uk-accordion></ul>
             </div>
+            <!-- /Checklist -->
+
+            <!-- Timer -->
             <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: clock"></span>Timed Study</a></li>
+            <!-- /Timer -->
+
         </ul>
     </div>
 </div>
